--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     <div id="header-left">
       <button id="toggleSidebarBtn" onclick="toggleSidebar()">☰</button>
       <button id="toggleRightSidebarBtn" onclick="toggleRightSidebar()">i</button>
-      <span>Visualización de Polígonos por Zona de Explotación</span>
+      <span>Visualización de Zonas de Explotación</span>
     </div>
   </header>
 
