--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
   <header>
     <div id="header-left">
       <button id="toggleSidebarBtn" onclick="toggleSidebar()">☰</button>
-      <button id="toggleRightSidebarBtn" onclick="toggleRightSidebar()">Info</button>
+      <button id="toggleRightSidebarBtn" onclick="toggleRightSidebar()">Resumen</button>
       <span>Visualización de Zonas de Explotación</span>
     </div>
   </header>
