--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
   <!-- Estilos propios -->
   <style>
-    /* Mantener el mismo estilo de la página aquí */
     body {
       font-family: 'Poppins', sans-serif;
       background-color: #f4f4f9;
@@ -85,43 +84,160 @@
       margin: 0;
     }
 
-    .sidebar, .right-sidebar {
+    /* Barra lateral izquierda original */
+    .sidebar {
       height: 100vh;
       position: fixed;
       top: 80px;
+      left: 0;
+      width: 180px;
       background-color: #2c3e50;
       color: white;
       padding: 15px;
       box-shadow: 2px 0 5px rgba(0,0,0,0.1);
       z-index: 999;
       transition: transform 0.3s ease;
+      transform: translateX(-180px); /* Oculta inicialmente */
     }
 
-    .sidebar {
-      left: 0;
-      width: 180px;
-      transform: translateX(-180px); /* Inicialmente oculta */
+    .sidebar h2 {
+      font-size: 1.1rem;
+      margin-bottom: 15px;
+      text-align: left;
+      font-weight: bold;
     }
 
-    .right-sidebar {
-      right: 0;
-      width: 540px; /* Triplicamos la amplitud de la barra lateral derecha */
-      transform: translateX(540px); /* Inicialmente oculta */
-      z-index: 1100;
+    .sidebar p {
+      font-size: 14px;
     }
 
     .sidebar.visible {
       transform: translateX(0);
     }
 
+    /* Botones y elementos de la barra lateral izquierda */
+    .file-upload-container {
+      position: relative;
+      width: 100%;
+      text-align: left;
+    }
+
+    .file-upload-input {
+      display: none;
+    }
+
+    .file-upload-button {
+      background-color: #3498db;
+      color: white;
+      padding: 8px 14px;
+      border: none;
+      border-radius: 18px;
+      font-size: 12px;
+      cursor: pointer;
+      font-weight: 500;
+      text-transform: uppercase;
+      box-shadow: 0 4px 10px rgba(52, 152, 219, 0.2);
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+      width: 100%;
+    }
+
+    .file-upload-button:hover {
+      background-color: #2980b9;
+      box-shadow: 0 6px 15px rgba(52, 152, 219, 0.4);
+    }
+
+    .file-name {
+      margin-top: 10px;
+      font-size: 12px;
+      color: #666;
+      font-weight: 400;
+      font-style: italic;
+    }
+
+    /* Opciones para los interruptores */
+    .switch-container {
+      display: flex;
+      align-items: center;
+      margin-bottom: 15px;
+      color: white;
+    }
+
+    .switch-label {
+      font-size: 14px;
+      font-weight: bold;
+      margin-left: 10px;
+    }
+
+    .switch {
+      position: relative;
+      display: inline-block;
+      width: 34px;
+      height: 20px;
+    }
+
+    .switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      transition: .4s;
+      border-radius: 20px;
+    }
+
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 14px;
+      width: 14px;
+      left: 3px;
+      bottom: 3px;
+      background-color: white;
+      transition: .4s;
+      border-radius: 50%;
+    }
+
+    input:checked + .slider {
+      background-color: #2196F3;
+    }
+
+    input:checked + .slider:before {
+      transform: translateX(14px);
+    }
+
+    /* Barra lateral derecha con resumen */
+    .right-sidebar {
+      height: 100vh;
+      position: fixed;
+      top: 80px;
+      right: 0;
+      width: 540px; /* Triplicamos la amplitud de la barra lateral derecha */
+      background-color: #2c3e50;
+      color: white;
+      padding: 15px;
+      box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+      z-index: 1100;
+      transition: transform 0.3s ease;
+      transform: translateX(540px); /* Oculta inicialmente */
+    }
+
     .right-sidebar.visible {
       transform: translateX(0);
     }
 
-    .sidebar h2, .right-sidebar h2 {
+    .right-sidebar h2 {
       font-size: 1.1rem;
       margin-bottom: 15px;
       text-align: left;
+      font-weight: bold;
     }
 
     .summary-content {
@@ -222,7 +338,6 @@
     const fileName = document.getElementById('fileName');
     const legendPanel = document.getElementById('legendPanel');
     const legendContent = document.getElementById('legendContent');
-    const toggleLegendBtn = document.getElementById('toggleLegendBtn');
     const summaryContent = document.getElementById('summaryContent');
     const mapContainer = document.getElementById('mapContainer');
     const header = document.querySelector("header");
