--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       margin: 0;
     }
 
-    /* Barra lateral izquierda original */
+    /* Barra lateral izquierda */
     .sidebar {
       height: 100vh;
       position: fixed;
@@ -113,6 +113,16 @@
 
     .sidebar.visible {
       transform: translateX(0);
+    }
+
+    /* Botones de zoom ajustados para que nunca colapsen con la barra lateral */
+    .leaflet-top.leaflet-left {
+      left: 50px; /* Espacio mínimo cuando la barra está oculta */
+      transition: left 0.3s ease;
+    }
+
+    .sidebar.visible ~ .leaflet-top.leaflet-left {
+      left: 230px; /* Ajuste dinámico para evitar colisión con la barra lateral */
     }
 
     /* Botones y elementos de la barra lateral izquierda */
@@ -213,13 +223,13 @@
       transform: translateX(14px);
     }
 
-    /* Barra lateral derecha con resumen */
+    /* Barra lateral derecha con resumen y scroll */
     .right-sidebar {
       height: 100vh;
       position: fixed;
       top: 80px;
       right: 0;
-      width: 540px; /* Triplicamos la amplitud de la barra lateral derecha */
+      width: 540px;
       background-color: #2c3e50;
       color: white;
       padding: 15px;
@@ -227,6 +237,7 @@
       z-index: 1100;
       transition: transform 0.3s ease;
       transform: translateX(540px); /* Oculta inicialmente */
+      overflow-y: auto; /* Permite el scroll vertical */
     }
 
     .right-sidebar.visible {
