--- a/index.html
+++ b/index.html
@@ -277,7 +277,6 @@
     /* Botón de acción de la leyenda */
     .toggle-legend-btn {
       position: fixed;
-      bottom: 20px;
       left: 50%;
       transform: translateX(-50%);
       background-color: #3498db;
@@ -288,7 +287,7 @@
       cursor: pointer;
       font-size: 12px;
       z-index: 1100;
-      transition: transform 0.3s ease;
+      transition: transform 0.3s ease, bottom 0.3s ease;
     }
 
     .toggle-legend-btn:hover {
@@ -301,21 +300,17 @@
       bottom: 0;
       left: 0;
       right: 0;
-      height: 100px; /* Ajustar la altura de la leyenda */
       background-color: rgba(255, 255, 255, 0.9);
       box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.1);
       display: none; /* Inicialmente oculta */
       z-index: 1000;
       overflow-y: auto; /* Permitir scroll si es necesario */
+      padding: 10px;
+      text-align: center;
     }
 
     .legend-panel.visible {
       display: block;
-    }
-
-    .legend-content {
-      padding: 10px;
-      text-align: center;
     }
 
     .legend-item {
@@ -635,8 +630,10 @@
       const legendButton = document.querySelector('.toggle-legend-btn');
       if (legendPanel.classList.contains('visible')) {
         legendButton.innerText = 'Ocultar Leyenda';
+        legendButton.style.bottom = (legendPanel.offsetHeight + 20) + 'px'; // Ajuste dinámico del botón
       } else {
         legendButton.innerText = 'Mostrar Leyenda';
+        legendButton.style.bottom = '20px'; // Siempre a 20px del borde inferior
       }
     }
 
