--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       border-radius: 15px;
       cursor: pointer;
       font-size: 12px;
-      z-index: 1100;
+      z-index: 1200; /* Asegura que esté por encima de otros elementos */
       transition: transform 0.3s ease, bottom 0.3s ease;
     }
 
