--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
       bottom: 0;
       left: 0;
       right: 0;
-      background-color: rgba(255, 255, 255, 0.9);
+      background-color: #f0f0f0; /* Cambiado a un gris claro */
       box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.1);
       display: none; /* Inicialmente oculta */
       z-index: 1000;
@@ -320,6 +320,11 @@
       padding: 5px;
       font-size: 12px;
       text-align: center;
+      cursor: pointer; /* Añadir cursor de puntero para indicar que es clicable */
+    }
+
+    .legend-item.selected {
+      border-bottom: 2px solid #3498db; /* Indicar visualmente la selección */
     }
 
     .legend-color-box {
@@ -631,8 +636,10 @@
       const legendButton = document.querySelector('.toggle-legend-btn');
       if (legendPanel.classList.contains('visible')) {
         legendButton.innerText = 'Ocultar Leyenda';
+        legendButton.style.bottom = `${legendPanel.offsetHeight + 20}px`; // Ajusta el botón para que esté por encima del panel
       } else {
         legendButton.innerText = 'Mostrar Leyenda';
+        legendButton.style.bottom = '20px'; // Posición original del botón
       }
     }
 
