--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" />
 
   <!-- FontAwesome para los íconos -->
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
   <!-- Estilos propios -->
   <style>
@@ -230,9 +230,9 @@
       top: 80px;
       right: 0;
       width: 540px;
-      background-color: #2c3e50;
-      color: white;
-      padding: 15px;
+      background-color: #f9f9f9; /* Fondo más claro */
+      color: #333;
+      padding: 0; /* Eliminar padding para usarlo en los elementos internos */
       box-shadow: 2px 0 5px rgba(0,0,0,0.1);
       z-index: 1100;
       transition: transform 0.3s ease;
@@ -245,20 +245,25 @@
     }
 
     .right-sidebar h2 {
-      font-size: 1.1rem;
-      margin-bottom: 15px;
-      text-align: left;
+      font-size: 18px;
       font-weight: bold;
+      color: #333;
+      margin: 0;
+      padding: 15px;
+      border-bottom: 1px solid #e0e0e0;
+      position: sticky;
+      top: 0;
+      background-color: #f9f9f9;
+      z-index: 1;
     }
 
     .summary-content {
-      margin-top: 20px;
-      /* Ajustar estilos según tus preferencias */
+      padding: 0 15px;
     }
 
     /* Estilos para el resumen jerárquico */
     .summary-zone {
-      border-bottom: 1px solid #ccc;
+      border-bottom: 1px solid #e0e0e0;
       padding: 10px 0;
     }
 
@@ -266,33 +271,47 @@
       display: flex;
       align-items: center;
       cursor: pointer;
+      font-size: 16px;
+      font-weight: bold;
     }
 
     .toggle-button {
       width: 20px;
       text-align: center;
-      font-weight: bold;
       margin-right: 10px;
+      transition: transform 0.3s ease;
+    }
+
+    .toggle-button.expanded {
+      transform: rotate(90deg);
     }
 
     .zone-name {
       flex-grow: 1;
-      font-weight: bold;
     }
 
     .zone-total {
+      margin-left: auto;
       font-weight: normal;
+      color: #888;
     }
 
     .sections-container {
       margin-left: 30px;
       padding-top: 10px;
+      display: none; /* Inicialmente oculto */
     }
 
     .summary-section {
       display: flex;
       justify-content: space-between;
       margin-bottom: 5px;
+      font-size: 14px;
+      cursor: pointer;
+    }
+
+    .summary-section:hover {
+      background-color: #f0f0f0;
     }
 
     .section-name {
@@ -301,6 +320,11 @@
 
     .section-total {
       font-weight: normal;
+      color: #888;
+    }
+
+    .summary-header:hover {
+      background-color: #e6e6e6;
     }
 
     /* Botón de acción de la leyenda */
@@ -657,7 +681,7 @@
         const zoneHeader = document.createElement('div');
         zoneHeader.className = 'summary-header';
         zoneHeader.innerHTML = `
-          <span class="toggle-button">+</span>
+          <span class="toggle-button"><i class="fas fa-chevron-right"></i></span>
           <span class="zone-name">${zone}</span>
           <span class="zone-total">Total Pólizas: ${summary[zone].totalPolizasZona}</span>
         `;
@@ -666,7 +690,6 @@
         // Contenedor para las secciones censales, inicialmente oculto
         const sectionsContainer = document.createElement('div');
         sectionsContainer.className = 'sections-container';
-        sectionsContainer.style.display = 'none';
 
         for (const section in summary[zone].secciones) {
           // Crear elemento para la sección censal
@@ -683,10 +706,18 @@
         summaryContent.appendChild(zoneItem);
 
         // Añadir evento de clic para expandir/contraer
-        zoneHeader.querySelector('.toggle-button').addEventListener('click', function() {
+        zoneHeader.addEventListener('click', function() {
           const isVisible = sectionsContainer.style.display === 'block';
           sectionsContainer.style.display = isVisible ? 'none' : 'block';
-          this.textContent = isVisible ? '+' : '-';
+
+          const icon = this.querySelector('.toggle-button i');
+          if (isVisible) {
+            icon.classList.remove('fa-chevron-down');
+            icon.classList.add('fa-chevron-right');
+          } else {
+            icon.classList.remove('fa-chevron-right');
+            icon.classList.add('fa-chevron-down');
+          }
         });
       }
     }
