--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     /* Barra lateral izquierda */
     .sidebar {
-      height: 100vh;
+      height: calc(100vh - 80px);
       position: fixed;
       top: 80px;
       left: 0;
@@ -96,8 +96,12 @@
       padding: 15px;
       box-shadow: 2px 0 5px rgba(0,0,0,0.1);
       z-index: 999;
-      transition: transform 0.3s ease;
-      transform: translateX(-180px); /* Oculta inicialmente */
+      display: none; /* Oculta la barra lateral por defecto */
+      overflow-y: auto; /* Permite el scroll vertical */
+    }
+
+    .sidebar.visible {
+      display: block; /* Muestra la barra lateral cuando es visible */
     }
 
     .sidebar h2 {
@@ -109,10 +113,6 @@
 
     .sidebar p {
       font-size: 14px;
-    }
-
-    .sidebar.visible {
-      transform: translateX(0);
     }
 
     /* Botones de zoom ajustados para que nunca colapsen con la barra lateral */
@@ -225,15 +225,15 @@
 
     /* Barra lateral derecha con resumen y scroll */
     .right-sidebar {
-      height: 100vh;
+      height: calc(100vh - 80px);
       position: fixed;
       top: 80px;
       right: 0;
       width: 540px;
-      background-color: #f9f9f9; /* Fondo más claro */
-      color: #333;
-      padding: 0; /* Eliminar padding para usarlo en los elementos internos */
-      box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+      background-color: #2c3e50; /* Mismo fondo que la barra izquierda */
+      color: white; /* Texto en blanco */
+      padding: 0;
+      box-shadow: -2px 0 5px rgba(0,0,0,0.1);
       z-index: 1100;
       transition: transform 0.3s ease;
       transform: translateX(540px); /* Oculta inicialmente */
@@ -247,13 +247,13 @@
     .right-sidebar h2 {
       font-size: 18px;
       font-weight: bold;
-      color: #333;
+      color: white; /* Texto en blanco */
       margin: 0;
       padding: 15px;
-      border-bottom: 1px solid #e0e0e0;
+      border-bottom: 1px solid #444;
       position: sticky;
       top: 0;
-      background-color: #f9f9f9;
+      background-color: #2c3e50; /* Mismo fondo que la barra derecha */
       z-index: 1;
     }
 
@@ -263,7 +263,7 @@
 
     /* Estilos para el resumen jerárquico */
     .summary-zone {
-      border-bottom: 1px solid #e0e0e0;
+      border-bottom: 1px solid #444;
       padding: 10px 0;
     }
 
@@ -273,6 +273,7 @@
       cursor: pointer;
       font-size: 16px;
       font-weight: bold;
+      color: white;
     }
 
     .toggle-button {
@@ -293,7 +294,7 @@
     .zone-total {
       margin-left: auto;
       font-weight: normal;
-      color: #888;
+      color: #ccc;
     }
 
     .sections-container {
@@ -308,10 +309,11 @@
       margin-bottom: 5px;
       font-size: 14px;
       cursor: pointer;
+      color: white;
     }
 
     .summary-section:hover {
-      background-color: #f0f0f0;
+      background-color: #3a4a5a;
     }
 
     .section-name {
@@ -320,11 +322,11 @@
 
     .section-total {
       font-weight: normal;
-      color: #888;
+      color: #ccc;
     }
 
     .summary-header:hover {
-      background-color: #e6e6e6;
+      background-color: #3a4a5a;
     }
 
     /* Botón de acción de la leyenda */
@@ -649,23 +651,22 @@
         const zone = row[zoneColumn];
         const sectionCensal = row['ZE. Sección Censal'];
         const polizaSeccionCensal = parseInt(row['Pol. ZE. Sección Censal'] || 0);
-        const polizaZona = parseInt(vInicialSwitch.checked ? row['Pol. ZE. Zona de Explotación'] : row['Pol. Nueva Zona'] || 0);
+        const polizaZona = parseInt(vInicialSwitch.checked ? row['Pol. ZE. Zona de Explotación'] || 0 : row['Pol. Nueva Zona'] || 0);
 
+        // Inicializar zona si no existe
         if (!summary[zone]) {
           summary[zone] = {
-            totalPolizasZona: 0,
+            totalPolizasZona: polizaZona, // Asignamos el valor de pólizas de la zona
             secciones: {}
           };
         }
 
+        // Inicializar sección censal si no existe
         if (!summary[zone].secciones[sectionCensal]) {
           summary[zone].secciones[sectionCensal] = {
-            totalPolizasSeccion: 0
+            totalPolizasSeccion: polizaSeccionCensal
           };
         }
-
-        summary[zone].totalPolizasZona += polizaZona;
-        summary[zone].secciones[sectionCensal].totalPolizasSeccion += polizaSeccionCensal;
       });
 
       // Limpiar contenido anterior
@@ -697,7 +698,7 @@
           sectionItem.className = 'summary-section';
           sectionItem.innerHTML = `
             <span class="section-name">${section}</span>
-            <span class="section-total">Total Pólizas: ${summary[zone].secciones[section].totalPolizasSeccion}</span>
+            <span class="section-total">${summary[zone].secciones[section].totalPolizasSeccion}</span>
           `;
           sectionsContainer.appendChild(sectionItem);
         }
