--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
   
+  <!-- Leaflet.EasyButton CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet-easybutton/2.4.0/easy-button.css">
+  
   <!-- Google Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
 
@@ -589,6 +592,7 @@
 
   <!-- Scripts -->
   <script defer src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-easybutton/2.4.0/easy-button.js"></script>
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
@@ -837,20 +841,20 @@
       if (polygonLayer.getLayers().length > 0) {
         map.fitBounds(polygonLayer.getBounds());
       }
-
-      // Añadir funcionalidad de búsqueda
-      searchInput.addEventListener('input', function() {
-        const searchTerm = this.value.toLowerCase();
-        document.querySelectorAll('.legend-item').forEach(item => {
-          const zoneName = item.getAttribute('data-zone').toLowerCase();
-          if (zoneName.includes(searchTerm)) {
-            item.style.display = 'flex';
-          } else {
-            item.style.display = 'none';
-          }
-        });
-      });
     }
+
+    // Añadir funcionalidad de búsqueda
+    searchInput.addEventListener('input', function() {
+      const searchTerm = this.value.toLowerCase();
+      document.querySelectorAll('.legend-item').forEach(item => {
+        const zoneName = item.getAttribute('data-zone').toLowerCase();
+        if (zoneName.includes(searchTerm)) {
+          item.style.display = 'flex';
+        } else {
+          item.style.display = 'none';
+        }
+      });
+    });
 
     // Limpiar los polígonos del mapa
     function clearMap() {
@@ -946,7 +950,6 @@
             label: 'Pólizas por Zona',
             data: data,
             backgroundColor: labels.map(zone => {
-              // Obtener el color utilizado para la zona
               return polygonsByZone[zone][0].options.fillColor;
             })
           }]
