--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@
       border: none;
       border-radius: 0.375rem;
       font-size: 0.875rem;
+      box-sizing: border-box;
     }
 
     .legend-content {
@@ -507,8 +508,8 @@
 
   <header>
     <div id="header-left">
-      <button id="toggleSidebarBtn" onclick="toggleSidebar()" aria-label="Mostrar opciones" role="button">☰</button>
-      <button id="toggleRightSidebarBtn" onclick="toggleRightSidebar()" aria-label="Mostrar resumen" role="button">Resumen</button>
+      <button id="toggleSidebarBtn" aria-label="Mostrar opciones" role="button">☰</button>
+      <button id="toggleRightSidebarBtn" aria-label="Mostrar resumen" role="button">Resumen</button>
       <span>Visualización de Zonas de Explotación</span>
     </div>
   </header>
@@ -616,6 +617,8 @@
       const loader = document.getElementById('loader');
       const exportMapBtn = document.getElementById('exportMapBtn');
       const searchInput = document.getElementById('searchInput');
+      const toggleSidebarBtn = document.getElementById('toggleSidebarBtn');
+      const toggleRightSidebarBtn = document.getElementById('toggleRightSidebarBtn');
       let csvData = null; // Variable para almacenar los datos CSV en memoria
 
       let polygonsByZone = {}; // Objeto para almacenar polígonos por zona
@@ -963,7 +966,8 @@
         });
       }
 
-      function toggleSidebar() {
+      // Mostrar/Ocultar la barra lateral izquierda
+      toggleSidebarBtn.addEventListener('click', function() {
         sidebar.classList.toggle('visible');
 
         const leafletControls = document.querySelector('.leaflet-top.leaflet-left');
@@ -972,9 +976,10 @@
         } else {
           leafletControls.style.left = '50px';
         }
-      }
+      });
 
-      function toggleRightSidebar() {
+      // Mostrar/Ocultar la barra lateral derecha
+      toggleRightSidebarBtn.addEventListener('click', function() {
         rightSidebar.classList.toggle('visible');
 
         const isRightSidebarVisible = rightSidebar.classList.contains('visible');
@@ -988,7 +993,7 @@
         } else {
           leafletControls.style.right = '70px';
         }
-      }
+      });
 
       // Mostrar/Ocultar la leyenda
       toggleLegendSwitch.addEventListener('change', function() {
